src/objects/EC_Exhibitor_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exhibitor Settings</relationshipLabel>
        <relationshipName>Exhibitor_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhibitor_Email__c</fullName>
        <label>Exhibitor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Image_Id__c</fullName>
        <label>Logo Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Budget__c</fullName>
        <label>Max Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <label>Reply To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Invoice_To__c</fullName>
        <label>Send Invoice To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_1__c</fullName>
        <label>Signature 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_2__c</fullName>
        <label>Signature 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_3__c</fullName>
        <label>Signature 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Domain__c</fullName>
        <label>Verified Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Email__c</fullName>
        <formula>If(NOT(ISBLANK(Verified_Domain__c)),LEFT(Exhibitor_Email__c , FIND(&quot;@&quot;, Exhibitor_Email__c )) + Verified_Domain__c, &apos;&apos;)</formula>
        <label>Verified Email</label>
        <type>Text</type>
    </fields>
    <label>Exhibitor Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Exhibitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibitor Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>